convert (revert) jdk 10 build to jdk 8 leaving unused module_build scripts in place